--- a/content/themes/jellebaars/sass/base/typo/_typography.scss
+++ b/content/themes/jellebaars/sass/base/typo/_typography.scss
@@ -66,6 +66,7 @@ a 		  = 15px walsheim
 
 *{
 	@extend %base;
+  word-wrap: normal;
 }
 
 h1{
